--- a/api/appsettings.Development.json
+++ b/api/appsettings.Development.json
@@ -5,5 +5,6 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "ClientUrl": "http://localhost:3000"
 }
